add create share post route
